# xrdb

./: .cvsignore  .gitignore  .gitlab-ci.yml  ChangeLog  Makefile.am  README.md  autogen.sh  configure.ac  meson.build  meson_options.txt  xrdb.c  xrdb.man
man/: meson.build  xrdb.man
